--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "fishing-notifications",
+  "name": "fishing-spots-notifications",
   "version": "1.0.0",
   "dependencies": {
     "firebase-admin": "^11.0.0"
-  },
-  "engines": {
-    "node": "18.x"
   }
 }
