--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "fishing-spots-notifications",
-  "version": "1.0.0",
+  "version": "2.0.0",
+  "description": "Enhanced fishing spots notifications with Supabase integration",
   "dependencies": {
-    "firebase-admin": "^11.0.0"
+    "firebase-admin": "^11.0.0",
+    "@supabase/supabase-js": "^2.38.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
